add working log - 20260919